--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
 				var uhoyde = 10;
 			    var udybde = 10;
 
-			    for (var i = 0; i < ubreddeAntall; i++) {
-			        for (var j = 0; j < uhoydeAntall; j++) {
-			            for (var k = 0; k < udybdeAntall; k++) {
+			    //for (var i = 0; i < ubreddeAntall; i++) {
+			    //    for (var j = 0; j < uhoydeAntall; j++) {
+			    //        for (var k = 0; k < udybdeAntall; k++) {
 
-			                var geometrysmall = new THREE.BoxGeometry(ubredde, uhoyde, udybde);
-			                var materialsmall = new THREE.MeshBasicMaterial({ vertexColors: THREE.FaceColors, overdraw: 0.5, wireframe: false });
-			                cubesmall = new THREE.Mesh(geometrysmall, materialsmall);
-			                cubesmall.position.x = 0 - (bredde / 2) + (ubredde / 2);
-			                cubesmall.position.y = 0 - (hoyde / 2) + (uhoyde / 2);
-			                cubesmall.position.z = 0 - (dybde / 2) + (udybde / 2);
-			                mycube = new THREE.BoxHelper(cubesmall);
-			                mycube.material.color.set(0xD2D2D2);
-			                scene.add(mycube);
+			               
 
-			            }
-			        }
+			    //        }
+			    //    }
 
-			    }
-				
+			    //}
+			    var geometrysmall = new THREE.BoxGeometry(ubredde, uhoyde, udybde);
+			    var materialsmall = new THREE.MeshBasicMaterial({ vertexColors: THREE.FaceColors, overdraw: 0.5, wireframe: false });
+			    cubesmall = new THREE.Mesh(geometrysmall, materialsmall);
+			    cubesmall.position.x = 0 - (bredde / 2) + (ubredde / 2);
+			    cubesmall.position.y = 0 - (hoyde / 2) + (uhoyde / 2);
+			    cubesmall.position.z = 0 - (dybde / 2) + (udybde / 2);
+			    mycube = new THREE.BoxHelper(cubesmall);
+			    mycube.material.color.set(0xD2D2D2);
+			    scene.add(mycube);
 
 				var geometryc = new THREE.BoxGeometry(bredde, hoyde, dybde);
 				var materialc = new THREE.MeshBasicMaterial({ vertexColors: THREE.FaceColors, overdraw: 0.5, wireframe: false });
