--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			    cubesmall.position.y = 0 - (hoyde / 2) + (uhoyde / 2);
 			    cubesmall.position.z = 0 - (dybde / 2) + (udybde / 2);
 			    mycube = new THREE.BoxHelper(cubesmall);
-			    mycube.material.color.set(0xD2D2D2);
+			    mycube.material.color.set(0xff0000);
 			    scene.add(mycube);
 
 				var geometryc = new THREE.BoxGeometry(bredde, hoyde, dybde);
