--- a/index.html
+++ b/index.html
@@ -62,17 +62,19 @@
                         <label for="pakningdybde">Pakningdybde</label>
                         <input class="form-control" value="10" id="pakningdybde" type="text">
                     </div>
-                    <div class="col-xs-3">
+
+
+                    <div class="col-xs-3 ">
                         <label for="antallbredde">AntallIBredde</label>
-                        <input class="form-control" id="antallbredde" type="text">
+                        <input class="form-control" value="10" id="antallbredde" type="text">
                     </div>
                     <div class="col-xs-3">
                         <label for="antallhoyde">AntallIhoyde</label>
-                        <input class="form-control" id="antallhoyde" type="text">
+                        <input class="form-control" value="20" id="antallhoyde" type="text">
                     </div>
                     <div class="col-xs-3">
                         <label for="antalldybde">AntallIdybde</label>
-                        <input class="form-control" id="antalldybde" type="text">
+                        <input class="form-control" value="10" id="antalldybde" type="text">
                     </div>
                 </div>
             </div>
@@ -132,16 +134,7 @@
 				var uhoyde = 10;
 			    var udybde = 10;
 
-			    //for (var i = 0; i < ubreddeAntall; i++) {
-			    //    for (var j = 0; j < uhoydeAntall; j++) {
-			    //        for (var k = 0; k < udybdeAntall; k++) {
 
-			               
-
-			    //        }
-			    //    }
-
-			    //}
 			    var geometrysmall = new THREE.BoxGeometry(ubredde * ubreddeAntall, uhoyde * uhoydeAntall, udybde * udybdeAntall);
 			    var materialsmall = new THREE.MeshBasicMaterial({  color: 0x007F00, transparent: true, opacity: 0.5, overdraw: false, wireframe: false });
 			    cubesmall = new THREE.Mesh(geometrysmall, materialsmall);
@@ -171,9 +164,9 @@
 				container.appendChild( stats.dom );
 
 				//
-				document.addEventListener('mousemove', onDocumentMouseMove, false);
-				document.addEventListener('mousedown', onDocumentMouseDown, false);
-				document.addEventListener('mouseup', onDocumentMouseUp, false);
+				container.addEventListener('mousemove', onDocumentMouseMove, false);
+				container.addEventListener('mousedown', onDocumentMouseDown, false);
+				container.addEventListener('mouseup', onDocumentMouseUp, false);
 			    //window.addEventListener( 'resize', onWindowResize, false );
 
 			
